handbook/versioned_docs/version-1.4.0/startguide.mdx
---
id: startguide
title: 入门指南
---

## 一、说明

TouchSocket（Pro）是基于.Net发布的程序集，所以它可以被用于对应.Net版本的C#、F#、VB.net等语言项目。它不区分您的项目是控制台、Winform、Wpf、或者是Aspnetcore，它统统都支持。

下面我们将以最简单的`C# 控制台`程序作为入门，让您最直观的感受ToucSocket的强大。

## 二、创建项目

由于TouchSocket（Pro）是基于net45、netstandard2.0、netcoreapp3.1三个平台作为常期支持平台，net7.0作为最新发布平台的程序，所以您可以用vs2012及以上的任意版本创建项目。

下面我们将以vs2022作为示例：

:::info 说明

如果您选择vs code等其他的编译工具，那么我相信您已不是新手。那么您只需要安装TouchSocket（Pro）的最新nuget包即可。

:::  

### 2.1 创建新项目

<img src={require('@site/static/img/docs/startguide-1.png').default} />

### 2.2 选择项目类型
<img src={require('@site/static/img/docs/startguide-2.png').default} />

### 2.3 配置项目名称和路径
<img src={require('@site/static/img/docs/startguide-3.png').default} />

### 2.4 选择Net版本
<img src={require('@site/static/img/docs/startguide-4.png').default} />
<img src={require('@site/static/img/docs/startguide-5.png').default} />

## 三、安装

### 3.1 Nuget安装

右击项目=》点击“管理Nuget程序包”。

<img src={require('@site/static/img/docs/startguide-6.png').default} />

点击“浏览”，然后在搜索框输入`TouchSocket`，然后在搜索结果中选择。最后点击安装。

<img src={require('@site/static/img/docs/startguide-7.png').default} />

### 3.2 PackageReference 

单击项目，打开项目编辑，然后在空白根内部引用。

```xml
<ItemGroup>
	<PackageReference Include="TouchSocket" Version="1.2.3"/>
</ItemGroup>
```
:::tip 提示

实际使用时，可能需要安装的是其他组件，例如`TouchSocket.Dmtp`。所以请直接安装所需组件库。同时Version="1.2.3"可能不是最新的版本，请前往[Nuget官网](https://www.nuget.org/packages?q=TouchSocket)查看。

:::  

<img src={require('@site/static/img/docs/startguide-8.png').default} />

### 3.3 Dll直接引用

在[Nuget官网](https://www.nuget.org/packages?q=TouchSocket)中，选择需要的，然后选择“Download package”，即可下载一个后缀为`.nupkg`文件。

<img src={require('@site/static/img/docs/startguide-9.png').default} />

:::tip 提示

如果下载速度较慢，可以考虑使用迅雷等工具加速。同时不同的包可能有不同的依赖，所以依赖包也需要下载。

:::  

当然你可以通过`nuget.exe`直接下载，这样的好处就是依赖库它会一起下载。首先你需要到[nuget](https://www.nuget.org/downloads)下载可运行程序。一般选择`Windows x86 Commandline`的最新的即可。本示例使用`v6.7.0`.

然后把下载好的`nuget.exe`放到任意目录下。

然后使用`cmd`、或者`powershell`等工具进入该目录（比较简单的操作是，先打开该目录，然后按住`shift`键，然后右击鼠标，会有`在此处打开命令行`或`powershell`等选项）。然后执行下列命令。

```bash
 .\nuget.exe install TouchSocket -Version 1.2.3 -SolutionDirectory . -PackageSaveMode nupkg
```

:::tip 提示

实际使用时，可能需要安装的是其他组件，例如`TouchSocket.Dmtp`。所以请直接安装所需组件库。同时Version="1.2.3"可能不是最新的版本，请前往[Nuget官网](https://www.nuget.org/packages?q=TouchSocket)查看。

:::  

然后会在当前目录下，生成一个名为“packages”的文件夹。在这个文件夹就有所有依赖的库。

然后将下载的后缀为`.nupkg`的文件，通过压缩工具`解压`（如果是通过nuget.exe下载的话，不用解压）。得到如下目录结构。

<img src={require('@site/static/img/docs/startguide-10.png').default} />

然后进入“lib”的文件夹。选择对应平台。

:::tip 提示

一般来说，所有基于.NET Framework的项目，都最好引用net45的库。然后其他版本的，选择最近的，较低的库即可。在本示例中，选择netcoreapp3.1的库。

:::  

把下列文件引用到项目即可。

<img src={require('@site/static/img/docs/startguide-11.png').default} />

<img src={require('@site/static/img/docs/startguide-12.png').default} />


## 四、结束

恭喜你，到这里，你就完成了入门的教学，你可能会好奇，做了这么多，还是什么都没有做啊。这是因为TouchSocket并不是一个单功能的，而是一个多功能程序库。所以，你必须在其他模块中查看你所需要的内容。

祝你好运！！！
